# bastion

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  Dockerfile.qwen35  LICENSE  README.md  ask.cmd  mytasks.json  pyproject.toml
config/: models.json
data/: eval_tasks.json  eval_tasks_hard.json  fireworks_smoke.json  remote_smoke_task.jsonl  sample_tasks.json  sample_tasks.jsonl
docs/: pre_kickoff_checklist.md  track1_battle_plan.md
frugalrouter/: __init__.py  cli.py  config.py  decision_log.py  eval_runner.py  io.py  local_verify.py  math_solver.py  model_policy.py  prompting.py  repl.py  report.py  router.py  task_classifier.py  types.py
frugalrouter/evaluation/: verifier.py
frugalrouter/providers/: fireworks.py  local.py  local_model.py
scripts/: ask.ps1  build_qwen35_submission.ps1  build_submission.ps1  build_v21_droplet.sh  demo_v23.ps1  evaluate_local_model.py  evaluate_structured_ner.py  fetch_wheels.ps1  finetune_lora.py  fix_docker.ps1  gen_finetune_data.py  gen_finetune_data_v2.py  model_bakeoff.py  model_confidence_bakeoff.py  prepare_conll_ner.py  prepare_tweet_eval_sentiment.py  run_eval.ps1  test_container.ps1  watch_lablab_twitch.ps1
tests/: test_eval_runner.py  test_evaluate_local_model.py  test_evaluate_structured_ner.py  test_fireworks.py  test_gen_finetune_data_v2.py  test_local_model.py  test_local_verify.py  test_math_solver.py  test_model_bakeoff.py  test_model_confidence_bakeoff.py  test_prepare_conll_ner.py  test_prepare_tweet_eval_sentiment.py  test_prompting.py  test_router.py  test_task_classifier.py
